--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
           name: Build application Docker image
           command: |
             docker build --cache-from=app -t nginixapp .
+            docker image ls
       - run:
           name: Save Docker image layer cache
           command: |
@@ -38,3 +39,31 @@ jobs:
           key: v1-{{ .Branch }}-{{ epoch }}
           paths:
             - /caches/app.tar
+  test:
+      working_directory: /app
+      docker:
+        - image: docker:17.05.0-ce-git
+      steps:
+        - checkout
+        - setup_remote_docker
+        - restore_cache:
+            keys:
+              - v1-{{ .Branch }}
+            paths:
+              - /caches/app.tar
+        - run:
+            name: Run the container 
+            command: |
+              ./run_docker.sh
+        - run:
+            command: |
+              echo curl localhost:8080
+workflows:
+  Default:
+    jobs:
+      - build
+      - Test: 
+          requires : 
+            - build
+
+
