--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           keys:
             - v1-{{ .Branch }}
           paths:
-            - /caches/app.tar
+            - /caches/
       - run:
           name: Load Docker image layer cache
           command: |
@@ -28,17 +28,17 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=app -t nginixapp .
+            docker build  -t nginixapp .
             docker image ls
       - run:
           name: Save Docker image layer cache
           command: |
             mkdir -p /caches
-            docker save -o /caches/app.tar nginixapp
+            docker save -o /caches/ nginixapp
       - save_cache:
           key: v1-{{ .Branch }}-{{ epoch }}
           paths:
-            - /caches/app.tar
+            - /caches/
   test:
       working_directory: /app
       docker:
@@ -50,7 +50,7 @@ jobs:
             keys: 
               - v1-{{ .Branch }}
             paths:
-              - /caches/app.tar
+              - /caches/
         - run:
             name: Run the container 
             command: |
