--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,8 @@ jobs:
         - run:
             name: Run  the container 
             command: |
-              docker run -p 8000:80 nginixapp
+              docker run -d -p 8000:80 nginixapp
+              
 workflows:
   Default:
     jobs:
