--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
         - run: 
             name : install curl
             command : |
-              sudo apt install curl
+              apt install curl
 
         - run:
             name: Load  the container 
