--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
             name: Run  the container 
             command: |
               docker run -d -p 8000:80 nginixapp
-              curl localhost:8000
+              curl http://localhost:8000/
               
 workflows:
   Default:
