--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,7 @@ jobs:
             command: |
               docker run -d -p 8080:80 nginixapp
               docker image ls
+              docker container ls 
               curl http://localhost:8080/
               
 workflows:
