--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,12 +56,7 @@ jobs:
               docker run -d -p 8080:80 nginixapp
               docker image ls
               docker container ls 
-              curl --connect-timeout 5 \
-                  --max-time 10 \
-                  --retry 5 \
-                  --retry-delay 0 \
-                  --retry-max-time 40 \
-                  'localhost:8080'
+              curl --retry 20 --retry-delay 5 --retry-connrefused localhost:8080
 workflows:
   Default:
     jobs:
