--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,9 +53,10 @@ jobs:
         - run:
             name: Run  the container 
             command: |
+              docker run -d -p 8080:80 nginixapp
               docker image ls
               docker container ls 
-              curl --retry 20 --retry-delay 5 --retry-connrefused localhost:8080
+              curl --retry-connrefused --retry 20 --retry-delay 5  localhost:8080
 workflows:
   Default:
     jobs:
