--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,8 @@ jobs:
               docker run -d -p 8080:80 nginixapp
               docker image ls
               docker container ls 
+              sleep 10
+
               curl --retry-connrefused --retry 20 --retry-delay 5  localhost:8080
 workflows:
   Default:
