--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,9 @@ jobs:
         - run: 
             name : install curl
             command : |
+              pip install \
+              docker-compose==1.12.0 
+
               apk update && apk add curl curl-dev bash
 
         - run:
