--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,9 @@ jobs:
         - run: 
             name : install curl
             command : |
+              apk add --no-cache \
+              py-pip=9.0.0-r1
+
               pip install \
               docker-compose==1.12.0 
 
