--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,7 @@ jobs:
 
               pip install \
               docker-compose==1.12.0 
+              awscli==1.11.76
 
               apk update && apk add curl curl-dev bash
 
