--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,5 @@ services:
     restart: unless-stopped
     ports:
       - 8000:8000
+    volumes:
+      - ./index.html:/usr/share/nginx/html/index.html
