--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
             apk add --no-cache \
               py-pip=9.0.0-r1
             pip install \
-              docker-compose==1.12.0 \
+              docker-compose \
               awscli==1.11.76
       - run:
           name: Build application Docker image
@@ -48,7 +48,7 @@ jobs:
               py-pip=9.0.0-r1
 
               pip install \
-              docker-compose==1.12.0 
+              docker-compose \
               awscli==1.11.76
 
               apk update && apk add curl curl-dev bash
