--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           name: Install dependencies
           command: |
             apk add --no-cache \
-              py-pip=9.0.0-r1
+              py-pip
             pip install \
               docker-compose \
               awscli==1.11.76
@@ -45,7 +45,7 @@ jobs:
             name : install curl
             command : |
               apk add --no-cache \
-              py-pip=9.0.0-r1
+              py-pip
 
               pip install \
               docker-compose \
