--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run:
           name: Save Docker image layer cache
           command: |
-            mkdir -p /caches
+            sudo mkdir -p /caches
             docker save -o /caches/nginixapp.tar nginixapp
       - save_cache:
           key: v1-{{ .Branch }}
