--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,12 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+           sudo apt-get install \
+            ca-certificates \
+            curl \
+            gnupg \
+            lsb-release
+
             pip install \
               docker-compose \
               awscli==1.11.76
