--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,27 +2,16 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/python:3.10.7
+      - image: cimg/go:1.17
 
     steps:
       - checkout
-      - setup_remote_docker
-      - run:
-          name: Install dependencies
-          command: |
-           sudo apt-get install \
-            ca-certificates \
-            curl \
-            gnupg \
-            lsb-release
-
-            pip install \
-              docker-compose \
-              awscli==1.11.76
+      - setup_remote_docker:
+          version: 20.10.14
+          docker_layer_caching: true
       - run:
           name: Build application Docker image
           command: |
-            sudo service docker start
             docker build  -t nginixapp .
             docker image ls
       - run:
