--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           name: Save Docker image layer cache
           command: |
             sudo mkdir -p /caches
-            sudo docker save -o /caches/nginixapp.tar nginixapp
+            docker save -o /caches/nginixapp.tar nginixapp
       - save_cache:
           key: v1-{{ .Branch }}
           paths:
