--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,11 @@ jobs:
       - run:
           name: Save Docker image layer cache
           command: |
-            sudo mkdir -p /caches
-            docker save -o /caches/nginixapp.tar nginixapp
+              docker-compose up -d
+              docker image ls
+              docker container ls 
+
+              curl --retry-connrefused --retry 20 --retry-delay 5  localhost:8080
       - save_cache:
           key: v1-{{ .Branch }}
           paths:
@@ -56,7 +59,6 @@ jobs:
               docker-compose up -d
               docker image ls
               docker container ls 
-              sleep 60
 
               curl --retry-connrefused --retry 20 --retry-delay 5  localhost:8080
 workflows:
