--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,21 @@ jobs:
 
     steps:
       - checkout
-      - setup_remote_docker:
-          version: 20.10.14
-          docker_layer_caching: true
+      - setup_remote_docker
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --no-cache \
+              py-pip=9.0.0-r1
+            pip install \
+              docker-compose==1.12.0 \
+              awscli==1.11.76
+      - restore_cache:
+          keys:
+            - v1-{{ .Branch }}
+          paths:
+            - /caches/app.tar
+      
       - run:
           name: Build application Docker image
           command: |
@@ -17,7 +29,7 @@ jobs:
       - run:
           name: Save Docker image layer cache
           command: |
-              docker-compose up -d
+              docker-compose -f  up 
               docker image ls
               docker container ls 
 
