--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: Save Docker image layer cache
           command: |
-              docker-compose -f  up 
+              docker-compose up -d
               docker image ls
               docker container ls 
 
