--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,13 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/cci-demo-docker-primary:0.0.1
+      - image: cimg/base:2022.06
 
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: 20.10.14
+          docker_layer_caching: true
 
       - restore_cache:
           keys:
