--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - run:
           name: Save Docker image layer cache
           command: |
-              docker-compose up -d
+              docker run -d -p 8000:80 nginixapp
               docker image ls
               docker container ls 
 
