--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: Save Docker image layer cache
           command: |
-              docker run -d -p 8080:80 nginixapp
+              docker run -d --name nginixapp nginixapp
               docker image ls
               docker container ls 
               docker exec nginixapp curl --retry 10 --retry-connrefused http://localhost:8080
