--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/base:2022.06
+      - image: circleci/cci-demo-docker-primary:0.0.2
 
     steps:
       - checkout
@@ -15,6 +15,12 @@ jobs:
             - v1-{{ .Branch }}
           paths:
             - /caches/app.tar
+      - run:
+          name: Install Docker Compose
+          command: |
+            set -x
+            curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
+            chmod +x /usr/local/bin/docker-compose
 
       - run:
           name: Build application Docker image
