--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,91 +1,44 @@
-version: 2.1
+version: 2
 jobs:
   build:
+    working_directory: /app
     docker:
-      - image: circleci/cci-demo-docker-primary:0.0.2
-
+      - image: docker:17.05.0-ce-git
     steps:
       - checkout
-      - setup_remote_docker:
-          version: 20.10.14
-          docker_layer_caching: true
-
+      - setup_remote_docker
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --no-cache \
+              py-pip=9.0.0-r1
+            pip install \
+              docker-compose==1.12.0 \
+              awscli==1.11.76
       - restore_cache:
           keys:
             - v1-{{ .Branch }}
           paths:
             - /caches/app.tar
       - run:
-          name: Install Docker Compose
+          name: Load Docker image layer cache
           command: |
-            set -x
-            VER="17.03.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
-
-            set -x
-            curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
-            chmod +x /usr/local/bin/docker-compose
-
+            set +o pipefail
+            docker load -i /caches/app.tar | true
       - run:
           name: Build application Docker image
           command: |
-          
-            docker build  -t nginixapp .
-            docker image ls
+            docker build --cache-from=app -t app .
       - run:
           name: Save Docker image layer cache
           command: |
-              docker run -d --name nginixapp nginixapp
-              docker image ls
-              docker container ls 
-              docker exec nginixapp curl --retry 10 --retry-connrefused http://localhost:8080
+            mkdir -p /caches
+            docker save -o /caches/app.tar app
       - save_cache:
-          key: v1-{{ .Branch }}
+          key: v1-{{ .Branch }}-{{ epoch }}
           paths:
-            - /caches/
-  test:
-      working_directory: /app
-      docker:
-        - image: docker:17.05.0-ce-git
-      steps:
-        - checkout
-        - setup_remote_docker
-        - restore_cache:
-            keys: 
-              - v1-{{ .Branch }}
-            paths:
-              - /caches/nginixapp.tar
-        - run: 
-            name : install curl
-            command : |
-
-              pip install \
-              docker-compose \
-              awscli==1.11.76
-
-              apk update && apk add curl curl-dev bash
-
-        - run:
-            name: Load  the container 
-            command: |
-              docker load -i /caches/nginixapp.tar
-        - run:
-            name: Run  the container 
-            command: |
-
-              docker-compose up -d
-              docker image ls
-              docker container ls 
-
-              curl --retry-connrefused --retry 20 --retry-delay 5  localhost:8080
-workflows:
-  Default:
-    jobs:
-      - build
-      - test : 
-          requires : 
-            - build
-
-
+            - /caches/app.tar
+      - run:
+          name: Run tests
+          command: |
+            docker-compose -f ./docker-compose.test.yml up
