--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 version: '3'
-
 services:
-  nginx:
-    image: nginx:latest
-    container_name: webserver
-    restart: unless-stopped
-    ports:
-      - 8000:8000
+  app:
+    build:
+      context: .
     volumes:
-      - ./index.html:/usr/share/nginx/html/index.html
+      - .:/app
+    ports:
+      - '8000:8000'
+    command: pm2-dev start ecosystem.config.js
