--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3'
+
 services:
-  app:
-    build:
-      context: .
-    volumes:
-      - .:/app
+  nginx:
+    image: nginx:latest
+    container_name: webserver
+    restart: unless-stopped
     ports:
-      - '8000:8000'
-    command: pm2-dev start ecosystem.config.js
+      - 8000:8000
+    volumes:
+      - ./index.html:/usr/share/nginx/html/index.html
