--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,78 @@
-version: 2
+version: 2.1
 jobs:
   build:
-    working_directory: /app
     docker:
-      - image: docker:17.05.0-ce-git
+      - image: cimg/base:2022.06
+
     steps:
       - checkout
-      - setup_remote_docker
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --no-cache \
-              py-pip=9.0.0-r1
-            pip install \
-              docker-compose==1.12.0 \
-              awscli==1.11.76
+      - setup_remote_docker:
+          version: 20.10.14
+          docker_layer_caching: true
+
       - restore_cache:
           keys:
             - v1-{{ .Branch }}
           paths:
             - /caches/app.tar
-      - run:
-          name: Load Docker image layer cache
-          command: |
-            set +o pipefail
-            docker load -i /caches/app.tar | true
+      
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=app -t app .
+            docker build  -t nginixapp .
+            docker image ls
       - run:
           name: Save Docker image layer cache
           command: |
-            mkdir -p /caches
-            docker save -o /caches/app.tar app
+              docker-compose up -d
+              docker image ls
+              docker container ls 
+
       - save_cache:
-          key: v1-{{ .Branch }}-{{ epoch }}
+          key: v1-{{ .Branch }}
           paths:
-            - /caches/app.tar
-      - run:
-          name: Run tests
-          command: |
-            docker-compose -f ./docker-compose.test.yml up
+            - /caches/
+  test:
+      working_directory: /app
+      docker:
+        - image: docker:17.05.0-ce-git
+      steps:
+        - checkout
+        - setup_remote_docker
+        - restore_cache:
+            keys: 
+              - v1-{{ .Branch }}
+            paths:
+              - /caches/nginixapp.tar
+        - run: 
+            name : install curl
+            command : |
+
+              pip install \
+              docker-compose \
+              awscli==1.11.76
+
+              apk update && apk add curl curl-dev bash
+
+        - run:
+            name: Load  the container 
+            command: |
+              docker load -i /caches/nginixapp.tar
+        - run:
+            name: Run  the container 
+            command: |
+
+              docker-compose up -d
+              docker image ls
+              docker container ls 
+
+              curl --retry-connrefused --retry 20 --retry-delay 5  localhost:8080
+workflows:
+  Default:
+    jobs:
+      - build
+      - test : 
+          requires : 
+            - build
+
+
