--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - run:
           name: Save Docker image layer cache
           command: |
-            mkdir -p /caches
+            sudo mkdir -p /caches
             docker save -o /caches/app.tar app
 
       - save_cache:
