--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: cimg/base:2022.06
+    working_directory: /app
 
     steps:
       - checkout
@@ -25,7 +26,7 @@ jobs:
           name: Save Docker image layer cache
           command: |
             sudo mkdir -p /caches
-            docker save -o /caches/app.tar app
+            docker save -o /caches/nginixapp.tar app
 
       - save_cache:
           key: v1-{{ .Branch }}
