--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           name: Save Docker image layer cache
           command: |
             mkdir -p /caches
-            docker save -o /caches/nginixapp.tar app
+            docker save -o /caches/nginixapp.tar nginixapp
 
       - save_cache:
           key: v1-{{ .Branch }}
