--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,4 +1,7 @@
 ---
+- name: "wait 600 seconds for target connection to become reachable/usable."
+  ansible.builtin.wait_for_connection:
+  timeout: 900
 
 - name: "configuration play." 
   hosts: web
