--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,7 +111,7 @@ jobs:
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --filters Name=tag:Name,Values=capstone-${CIRCLE_WORKFLOW_ID} \
             --output text)
-
+            echo capstone-${CIRCLE_WORKFLOW_ID}
             echo $backendIP
             echo $backendIP >> .circleci/ansible/inventory.txt
             echo $backendIP >> .circleci/ansible/backendip.txt
