--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,7 +1,4 @@
 ---
-- name: "wait 600 seconds for target connection to become reachable/usable."
-  ansible.builtin.wait_for_connection:
-  timeout: 900
 
 - name: "configuration play." 
   hosts: web
@@ -10,6 +7,16 @@
   become_method: sudo
   become_user: root  
   gather_facts: false
+  vars:
+    - ansible_python_interpreter: /usr/bin/python3
+    - ansible_host_key_checking: false
+    - ansible_stdout_callback: yaml
+
+
+  pre_tasks:
+    - name: "wait 600 seconds for target connection to become reachable/usable."
+      ansible.builtin.wait_for_connection:
+        timeout: 900
 
   roles:
     - configure-server
