--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ commands:
           name: Destroy backend
           when: on_fail
           command: |
-            echo backend-${CIRCLE_WORKFLOW_ID}
-            aws cloudformation delete-stack --stack-name backend-${CIRCLE_WORKFLOW_ID}
+            echo capstone-${CIRCLE_WORKFLOW_ID}
+            aws cloudformation delete-stack --stack-name capstone-${CIRCLE_WORKFLOW_ID}
 
 
 
