--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,17 @@ jobs:
         - image: circleci/buildpack-deps:stretch
       steps:
         - setup_remote_docker
+        - restore_cache:
+            keys: 
+              - v1-{{ .Branch }}
+            paths:
+              - /caches/nginixapp.tar
+
+        - run:
+            name: Load  the container 
+            command: |
+              docker load -i /caches/nginixapp.tar
+
         - run:
             name: Publish Docker Image to Docker Hub
             command: |
