--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,10 @@
 version: 2.1
+executors:
+  docker-publisher:
+    environment:
+      IMAGE_NAME: nginixapp
+    docker:
+      - image: circleci/buildpack-deps:stretch
 
 commands:
   destroy-environment:
@@ -19,9 +25,7 @@ jobs:
   build:
     working_directory: /app
 
-    docker:
-      - image: docker:17.05.0-ce-git
-
+    executor: docker-publisher
     steps:
       - checkout
       - setup_remote_docker:
@@ -32,7 +36,7 @@ jobs:
           keys:
             - v1-{{ .Branch }}
           paths:
-            - /caches/nginixapp.tar
+            - /caches/$IMAGE_NAME.tar
       - run:
           name : lint docker file 
           command : |
@@ -46,13 +50,13 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build  -t nginixapp .
+            docker build  -t $IMAGE_NAME .
             docker image ls
       - run:
           name: Save Docker image layer cache
           command: |
             mkdir -p /caches
-            docker save -o /caches/nginixapp.tar nginixapp
+            docker save -o /caches/$IMAGE_NAME.tar $IMAGE_NAME
 
       - save_cache:
           key: v1-{{ .Branch }}
@@ -85,24 +89,25 @@ jobs:
 
   publish-latest-docker-image:
       working_directory: /app
-      docker:
-        - image: docker:17.05.0-ce-git
+      executor: docker-publisher
       steps:
         - setup_remote_docker
         - restore_cache:
             keys: 
               - v1-{{ .Branch }}
             paths:
-              - /caches/nginixapp.tar
+              - /caches/IMAGE_NAME.tar
 
         - run:
             name: Load  the container 
             command: |
-              docker load -i /caches/nginixapp.tar
+              docker load -i /caches/IMAGE_NAME.tar
 
         - run:
             name: Publish Docker Image to Docker Hub
             command: |
+              echo "${DOCKERHUB_PASS}" | docker login --username "${DOCKERHUB_USERNAME}" --password-stdin
+
               echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
               docker push $IMAGE_NAME:latest
 
