--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,8 @@ jobs:
 
   publish-latest-docker-image:
       docker:
-        - image: docker:17.05.0-ce-git
+        - image: cimg/go:1.17
+
       steps:
         - setup_remote_docker
         - attach_workspace:
@@ -87,7 +88,8 @@ jobs:
         - run:
             name: Publish Docker Image to Docker Hub
             command: |
-              echo $DOCKERHUB_PASSWORD  | docker login -u $DOCKERHUB_USERNAME --password-stdin
+              echo "$DOCKERHUB_PASSWORD" | docker login --username $DOCKERHUB_USERNAME --password-stdin
+
               sudo docker push nginixapp:latest
 
   deploy-infrastructure:
