--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
 
   publish-latest-docker-image:
       docker:
-        - image: cimg/go:1.17
+        - image: circleci/buildpack-deps:stretch
 
       steps:
         - setup_remote_docker
@@ -88,7 +88,7 @@ jobs:
         - run:
             name: Publish Docker Image to Docker Hub
             command: |
-             echo “$DOCKERHUB_PASSWORD” | docker login -u “$DOCKERHUB_USERNAME” — password-stdin
+             echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
              sudo docker push nginixapp:latest
 
   deploy-infrastructure:
