--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ jobs:
             name: Publish Docker Image to Docker Hub
             command: |
              echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-             sudo docker push nginixapp:latest
+             docker push nginixapp
 
   deploy-infrastructure:
     docker:
