--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
   build:
 
     docker:
-      - image: circleci/buildpack-deps:stretch
+      - image: docker:17.05.0-ce-git
 
     steps:
       - checkout
@@ -27,6 +27,16 @@ jobs:
           version: 20.10.14
           docker_layer_caching: true
 
+      - run:
+          name : lint docker file 
+          command : |
+            apk add --update openssl
+            wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
+                chmod +x /bin/hadolint
+      - run:
+          name: run lint
+          command: |
+            hadolint Dockerfile
       - run:
           name: Build application Docker image
           command: |
@@ -36,8 +46,6 @@ jobs:
           name: Save Docker image layer cache
           command: |
             docker save -o nginixapp.tar nginixapp
-             echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-             docker push nginixapp
 
       - persist_to_workspace:
           root: .
@@ -80,8 +88,8 @@ jobs:
         - run:
             name: Publish Docker Image to Docker Hub
             command: |
-             echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-             docker push nginixapp
+             echo "W-~FbqZkR2B;Rftd" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+             docker push nginixapp:latest
 
   deploy-infrastructure:
     docker:
