--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,9 +89,8 @@ jobs:
             name: Publish Docker Image to Docker Hub
             command: |
              echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-             docker info | sed '/Username:/!d;s/.* //'
 
-             docker push nginixapp:latest
+             docker push yaqot/nginixapp:latest
 
   deploy-infrastructure:
     docker:
